# openharness

./: .dockerignore  .gitignore  .gitlab-ci.yml  Agent.md  CLAUD.md  Cargo.toml  Dockerfile.openagent-http-runtime  MODULES.md  README.md  REVIEW.md  __init__.py  init.sh  progress.md  pyproject.toml  tasks.json
cli/: Cargo.toml
cli/src/: agents.rs  auth.rs  cli.rs  client.rs  commands.rs  config.rs  diagnostics.rs  doctor.rs  fixtures.rs  github.rs  help.rs  interactions.rs  main.rs  mcp.rs  models.rs  prompt.rs  remote.rs  sessions.rs  util.rs
cli/src/models/: cache.rs  catalog.rs  command.rs  providers.rs
cli/src/prompt/: agent_loop.rs  mcp_runtime.rs  profile.rs  provider.rs  tool.rs
cli/src/prompt/agent_loop/: events.rs  resume.rs  resume_process.rs  run.rs  run_manual.rs  session_results.rs  task_context.rs  task_helpers.rs  task_tool.rs  types.rs
cli/src/prompt/profile/: binding.rs  builtin.rs  loading.rs  model.rs  parse.rs  permissions.rs  subagents.rs  types.rs
cli/src/prompt/provider/: anthropic.rs  config.rs  dispatch.rs  openai.rs  result.rs  sse.rs  streaming.rs  types.rs
cli/src/remote/: auth.rs  client.rs  commands.rs  events.rs  http.rs  mod.rs  render.rs  terminal.rs
cli/tests/: cli_commands.rs
cli/tests/cli_commands/: catalog.rs  helpers.rs  interactions.rs  remote_attach.rs  smoke.rs  streaming.rs  task_mcp_agent.rs
cli/tests/cli_commands/task_mcp_agent/: mcp.rs  profile.rs  registry.rs  task.rs
crates/openagent-app-server-client/: Cargo.toml
crates/openagent-app-server-client/src/: lib.rs
crates/openagent-app-server-client/tests/: remote_runtime.rs
crates/openagent-eval/: Cargo.toml
crates/openagent-eval/src/: lib.rs
crates/openagent-eval/tests/: eval_integrations.rs
crates/openagent-http-runtime/: Cargo.toml
crates/openagent-http-runtime/src/: lib.rs  main.rs
crates/openagent-http-runtime/tests/: http_runtime.rs
crates/openagent-swarm/: Cargo.toml
crates/openagent-swarm/src/: lib.rs  main.rs
crates/openagent-swarm/tests/: swarm_runtime.rs
runtime/http/: Cargo.toml
runtime/http/src/: http_runtime.rs
runtime/http/src/http/: agent_profiles.rs  app_events.rs  background_tasks.rs  cli.rs  event_store.rs  fixtures.rs  patch_stack.rs  prompt.rs  provider_loop.rs  provider_profile.rs  responses.rs  router.rs  session_actions.rs  session_crud.rs  session_routes.rs  session_summary.rs  session_tasks.rs  tests.rs  (+2 more)
runtime/http/tests/: http_runtime.rs
runtime/tui/: Cargo.toml
runtime/tui/src/: agent.rs  attachments.rs  control_actions.rs  interaction.rs  main.rs  provider.rs  render.rs  tests.rs  util.rs
runtime/tui/tests/: tui_control.rs
src/: Cargo.toml  core.rs
src/core/: context_budget.rs  context_helpers.rs  context_pack.rs  instruction_helpers.rs  instructions.rs  permissions.rs  scripted_loop.rs  skill_helpers.rs  skills.rs  tests.rs  util.rs
src/examples/: .gitignore  run_agentscope_universal.py  run_dashscope_universal.py  run_mock.py  run_query_only.py  swarm_course_demo.py  swarm_course_demo.yaml  swarm_mixed_all_runners.py  swarm_mixed_all_runners.yaml  swarm_mixed_openagent_a2a.py  swarm_mixed_openagent_a2a.yaml  swarm_subprocess_worker.py
src/mcp/: Cargo.toml
src/mcp/src/: mcp_bridge.rs
src/mcp/tests/: mcp_runtime.rs
src/openagent/: __init__.py
src/openagent/adapter/: __init__.py  _agentscope_compat.py  agent_adapter.py  agentscope_adapter.py  mcp_adapter.py  memory_adapter.py  toolkit_adapter.py
src/openagent/app_server/: __init__.py  protocol.py  runtime.py  server.py
src/openagent/cli/: __init__.py  auth.py  custom_commands.py  main.py  mcp.py  wellknown.py
src/openagent/core/: __init__.py  context_assets.py  context_budget.py  context_messages.py  context_pack.py  context_state.py  file_context.py  id.py  instructions.py  message_materializer.py  observability.py  runtime_logging.py  runtime_warnings.py  token_counting.py  tool_policy.py  types.py
src/openagent/integrations/: __init__.py  harbor.py  swarm.py  terminal_bench.py
src/openagent/prompts/: __init__.py  build.txt  explore.txt  plan.txt
src/openagent/sdk/: __init__.py  http_runtime.py
src/openagent/tui/: __init__.py  app.py  formatting.py  remote_runtime.py  state.py
src/protocol/: Cargo.toml
src/protocol/src/: protocol.rs
src/protocol/tests/: golden_fixtures.rs
src/provider/: Cargo.toml
src/provider/src/: provider.rs
src/provider/tests/: provider_adapters.rs
src/session/: Cargo.toml
src/session/src/: session_store.rs
src/session/tests/: session_trace.rs
src/swarm/: __init__.py  a2a_runner.py  cli.py  config.py  coordinator.py  function_runner.py  http_runner.py  inspection.py  isolation.py  langfuse_exporter.py  merge.py  merge_policy.py  payload.py  protocol.py  registry.py  results.py  resume.py  runtime.py  state.py  subprocess_runner.py  team.py  trace.py
src/tests/: .gitignore  _mock_model.py  agent_loop.rs  core_context_policy.rs  test_agent_prompts.py  test_agentscope_shell.py  test_anthropic_provider.py  test_app_server_protocol.py  test_app_server_runtime.py  test_app_server_server.py  test_context_budget.py  test_context_messages.py  test_context_pack.py  test_context_state.py  test_dashscope_streaming.py  test_eval_ci_gate.py  test_eval_runner.py  test_execution_runtime.py  test_file_context.py  test_file_tools.py  test_harbor_adapter.py  test_instructions.py  test_loop.py  test_mcp_auth.py  test_mcp_config.py  test_mcp_runtime.py  test_memory_tools.py  test_observability.py  test_openagent_cli.py  test_openai_streaming.py  test_permission.py  test_runtime_logging.py  test_rust_rewrite_fixtures.py  test_search_tools.py  test_session_store.py  test_skill.py  test_swarm_a2a_runner.py  test_swarm_cli.py  test_swarm_coordinator.py  test_swarm_course_demo.py  (+26 more)
src/tools/: Cargo.toml
src/tools/src/: toolkit.rs
src/tools/tests/: tool_runtime.rs
swarm/: Cargo.toml
swarm/src/: swarm_kernel.rs
swarm/src/swarm/: aggregation.rs  config.rs  config_loading.rs  deserializers.rs  metadata.rs  runners.rs  runtime.rs  tests.rs  transport_payloads.rs
swarm/tests/: swarm_runtime.rs
(+357 files in other folders)
