[workspace]
members = [
    "cli",
    "eval",
    "runtime/app-server",
    "runtime/app-server-client",
    "runtime/http",
    "runtime/tui",
    "src",
    "src/mcp",
    "src/protocol",
    "src/provider",
    "src/session",
    "src/tools",
    "swarm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"
repository = "https://github.com/LianWeiSQ/openagent-ai"
rust-version = "1.85"

[workspace.dependencies]
openagent-app-server = { path = "runtime/app-server" }
openagent-app-server-client = { path = "runtime/app-server-client" }
openagent-core = { path = "src" }
openagent-protocol = { path = "src/protocol" }
openagent-provider = { path = "src/provider" }
openagent-session = { path = "src/session" }
openagent-swarm = { path = "swarm" }
openagent-tools = { path = "src/tools" }
openagent-tui = { path = "runtime/tui" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
