[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openagent-core"
version = "0.1.0"
description = "OpenAgent core runtime (AgentLoop/Tool/Permission/Session)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "UNLICENSED" }
authors = [{ name = "OpenAgent" }]

[project.optional-dependencies]
# 可选依赖：仅在需要“AgentScope 外壳”时安装，不影响现有功能/测试
agentscope = ["agentscope"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
