[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openagent-core"
version = "0.1.0"
description = "OpenAgent core runtime (AgentLoop/Tool/Permission/Session)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "UNLICENSED" }
authors = [{ name = "OpenAgent" }]
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "markdownify>=0.13,<1",
    "PyYAML>=6,<7",
    "tiktoken>=0.7,<1",
    "mcp>=1,<2",
    "opensandbox",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openagent = ["core/tool/builtin/*.md"]
