[package]
name = "openagent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openagent-core.workspace = true
openagent-http-runtime = { path = "../openagent-http-runtime" }
openagent-mcp = { path = "../openagent-mcp" }
openagent-protocol.workspace = true
openagent-provider.workspace = true
openagent-session.workspace = true
openagent-swarm.workspace = true
openagent-tools.workspace = true
openagent-tui.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[[bin]]
name = "openagent"
path = "src/main.rs"
