[package]
name = "openagent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openagent-protocol.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha1.workspace = true

[lib]
path = "core.rs"

[lints]
workspace = true
