[package]
name = "openagent-swarm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
openagent-protocol.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true

[lib]
path = "src/swarm_kernel.rs"

[lints]
workspace = true

[[bin]]
name = "openagent-swarm"
path = "src/main.rs"
