[package]
name = "openagent-app-server-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openagent-protocol.workspace = true
openagent-app-server.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
