[package]
name = "openagent-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openagent-core.workspace = true
openagent-protocol.workspace = true
openagent-session.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
