[package]
name = "openagent-swarm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openagent-protocol.workspace = true

[lints]
workspace = true

[[bin]]
name = "openagent-swarm"
path = "src/main.rs"
