[package]
name = "openagent-http-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openagent-app-server.workspace = true
openagent-app-server-client.workspace = true
openagent-core.workspace = true
openagent-protocol.workspace = true
openagent-provider.workspace = true
openagent-session.workspace = true
openagent-tools.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[lib]
path = "src/http_runtime.rs"

[lints]
workspace = true

[[bin]]
name = "openagent-http-runtime"
path = "src/main.rs"
