[package]
name = "openagent-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
crossterm = "0.28.1"
openagent-app-server.workspace = true
openagent-app-server-client.workspace = true
openagent-core.workspace = true
ratatui = "0.29.0"
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[[bin]]
name = "openagent-tui"
path = "src/main.rs"
