[package]
name = "openagent-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openagent-protocol.workspace = true
openagent-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true

[lib]
path = "src/mcp_bridge.rs"

[lints]
workspace = true
