[package]
name = "openagent-session"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openagent-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
path = "src/session_store.rs"

[lints]
workspace = true
