[package]
name = "openagent-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openagent-core.workspace = true
openagent-protocol.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
path = "src/toolkit.rs"

[lints]
workspace = true
